# cs.emex.github.io

./: .gitignore  README.md  docker-compose.yml  index.html
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_user_manager.py  0003_add_news_posts.py  0004_add_user_role.py  0005_add_department_manager.py  0006_add_app_settings.py  0007_add_social_interactions.py  0008_add_courier_daily_address_stats.py  0009_add_courier_city_daily_stats.py  0010_add_user_hr_dashboard_fields.py  0011_add_user_zup_fields.py  0012_add_user_access_enabled.py  0013_add_chat_messages.py  0014_add_employee_gratitudes.py  0015_add_user_development_profile_fields.py  0016_add_department_content_fields.py  0017_add_user_work_status.py  0018_add_user_work_schedule.py  0019_add_courier_givn_analytics.py  0020_add_courier_city_branch_fields.py  0020_city_branch_fields.py  0021_add_system_updates.py
backend/app/: main.py  seed.py
backend/app/api/: admin.py  analytics.py  auth.py  chat.py  departments.py  deps.py  me.py  news.py  notifications.py  system_updates.py  users.py
backend/app/core/: ad.py  config.py  security.py  zup.py
backend/app/jobs/: refresh_courier_analytics.py
backend/app/models/: __init__.py  app_setting.py  chat.py  courier_analytics.py  department.py  gratitude.py  news.py  notification.py  system_update.py  user.py
backend/app/schemas/: analytics.py  chat.py  departments.py  gratitudes.py  news.py  notifications.py  system_updates.py  users.py
backend/tests/: test_news_sanitizer.py
(+40 files in other folders)
